# ucentral-mqtt

./: .gitignore  CMakeLists.txt  cmd.c  main.c  mosquitto.conf  mqtt.h  setup.txt  stats.c  ubus.c
cli/: CMakeLists.txt  cli.c
